--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/security-bundle": "6.0.*",
         "symfony/serializer": "6.0.*",
         "symfony/validator": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/yaml": "6.0.*",
+        "willdurand/hateoas-bundle": "^2.5"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
