--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
+        "vich/uploader-bundle": "^2.0",
         "willdurand/hateoas-bundle": "^2.5"
     },
     "require-dev": {
