--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -2,8 +2,8 @@ nelmio_api_doc:
   models: { use_jms: false }
   documentation:
     info:
-      title: Casino API
-      description: This is a Casino API for fun. ENJOY !!!
+      title: Card API
+      description: 
       version: 1.0.0
     components:
       securitySchemes:
